<resources>
    <string name="app_name">BkSmartLock</string>
    <string name="app_title">BK SMART LOCK</string>
    <string name="password">Passwords : \t </string>
    <string name="log_in">Log In</string>
    <string name="notify_wrong_information">Please check your account information</string>
    <string name="notify_access">Access successful</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="none">\t\t</string>
    <string name="unknown_lock">Unknown Lock</string>
    <string name="admin">Admin</string>
    <string name="manage_lock">Manage Lock</string>
    <string name="notify">Notify</string>
    <string name="notify_confirm_remove_lock">Do you really want to remove this lock?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_lock">Add Lock</string>
    <string name="message">MESSAGE</string>
    <string name="history">HISTORY</string>
    <string name="user_information">User</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="user_name">User name : \t</string>
    <string name="position">Position : \t</string>
    <string name="department">Department : \t</string>
    <string name="phone_number">Phone number : \t</string>
    <string name="email">Email : \t</string>
    <string name="log_out">Log out</string>
    <string name="remember_password">Remember password</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_setting">APP SETTING</string>
    <string name="wifi_access">Wifi Access</string>
    <string name="sync">Sync</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="data_synced">DATA SYNCED</string>
    <string name="data_not_synced">DATA NOT SYNCED</string>
    <string name="connected">CONNECTED</string>
    <string name="more_setting">More setting</string>
    <string name="change_information">Change information</string>
    <string name="change_password">Change passwords</string>
    <string name="default_time">13:00</string>
    <string name="default_action">Default action</string>
    <string name="guest">GUEST</string>
    <string name="notify_confirm_log_out">Do you really want to log out?</string>
    <string name="deny_access_admin">Sorry! You do not have the admin permission for this lock.</string>
    <string name="certification">Certification for the current lock:\t</string>
    <string name="require_admin">Require admin for the current lock</string>
    <string name="notify_require_admin">Your requirement have been sent to admin. Please wait for the answer. </string>
    <string name="waiting_acceptation_admin">Waiting for acceptation of the admin.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_passwords">New passwords : \t </string>
    <string name="confirm_passwords">Confirm passwords : \t </string>
    <string name="notify_empty_information">Please fill all information</string>
    <string name="full_name">Full name : \t</string>
    <string name="notify_no_internet">No Internet Connection available!</string>
    <string name="notify_sync_successful">Sync successful</string>
    <string name="notify_report_app_admin">Something is wrong. Please report this problem</string>
    <string name="notify_data_not_synced">Your data hasn\'t synced yet. Please sync your data before log out!</string>
    <string name="notify_confirm_cancel_sign_up"> Sign up process hasn\'t  finished. Do you really want to get back? </string>
    <string name="notify_wrong_confirm_passwords"> Wrong confirm password !</string>
    <string name="notify_sign_up_successful"> Sign up successful</string>
    <string name="notify_username_is_taken"> Sorry, but your account username has already been taken.Please choose another one</string>
    <string name="auto_locking_after_unlocking">Get A New Security Key \n \t Your key has been used for 0 times</string>
    <string name="unlocking_faster">Unlock Door Faster By Using NFC</string>
    <string name="app_version">App version 0.0.0</string>
    <string name="admin_message">13:40 : Require admin from ttanhvu</string>
    <string name="list_users">LIST USERS OF THIS LOCK</string>
    <string name="unlock_by">Unlock by </string>
    <string name="notify_need_internet_admin">You need internet connection to perform admin  permission! </string>
    <string name="cannot_sync_data">No internet connection! So we can\'t sync your data now! Please do it later by yourself </string>
    <string name="cannot_send_request_admin">Need internet connection to send your request</string>
</resources>
