<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtOldPasswords"
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDialogChangePasswordsTitle" />

    <EditText
        android:id="@+id/edtNewPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/new_passwords"
        style="@style/TextNormal"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOldPasswords" />

    <EditText
        android:id="@+id/edtConfirmPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/confirm_passwords"
        style="@style/TextNormal"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPasswords" />

    <TextView
        android:id="@+id/textDialogChangePasswordsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorTextClickable"
        app:layout_constraintEnd_toEndOf="@+id/space4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space3"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/space4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDialogChangePasswordsSave" />

    <Space
        android:id="@+id/space4"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/space3"
        app:layout_constraintStart_toEndOf="@+id/edtNewPasswords"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDialogChangePasswordsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/edtConfirmPasswords"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPasswords" />

    <Button
        android:id="@+id/btnDialogChangePasswordsCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/edtConfirmPasswords"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPasswords" />
</android.support.constraint.ConstraintLayout>